# docker-ml-demo

./: .gitignore  Dockerfile  Dockerfile-old  compose.yaml  dvc.yaml  main.py  pyproject.toml
audit/: predictions.txt
data/: .gitignore
flask_app/: app.py  requirements.txt
src/model/: model_building.py  model_evaluation.py  register_model.py
