[project]
name = "docker-ml-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "dagshub>=0.5.10",
    "flask>=3.1.1",
    "mlflow>=2.8,<3.0",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1"

]

[dependency-groups]
dev = [
    "dvc>=3.61.0",  
]
